--- a/python/12_scikit_learn/8.0 Principal Component Analysis.ipynb
+++ b/python/12_scikit_learn/8.0 Principal Component Analysis.ipynb
@@ -6,12 +6,50 @@
    "source": [
     "### In Depth: Principal Component Analysis\n",
     "\n",
-    "Up until now, we have been looking in depth at supervised learning estimators: those estimators that predict labels based on labeled training data. Here we begin looking at several unsupervised estimators, which can highlight interesting aspects of the data without reference to any known labels.\n",
+    "• Up until now, we have been looking in depth at supervised learning estimators: those estimators that predict labels based on labeled training data.\n",
     "\n",
-    "In this section, we explore what is perhaps one of the most broadly used of unsupervised algorithms, principal component analysis (PCA). PCA is fundamentally a dimensionality reduction algorithm, but it can also be useful as a tool for visualization, for noise filtering, for feature extraction and engineering, and much more. After a brief conceptual discussion of the PCA algorithm, we will see a couple examples of these further applications.\n",
+    "• Here we begin looking at several unsupervised estimators, which can highlight interesting aspects of the data without reference to any known labels.\n",
     "\n",
-    "We begin with the standard imports:"
+    "• In this section, we explore what is perhaps one of the most broadly used of unsupervised algorithms, principal component analysis (PCA).\n",
+    "\n",
+    "• PCA is fundamentally a dimensionality reduction algorithm, but it can also be useful as a tool for visualization, for noise filtering, for feature extraction and engineering, and much more.\n",
+    "\n",
+    "• After a brief conceptual discussion of the PCA algorithm, we will see a couple examples of these further applications.\n",
+    "\n",
+    "• We begin with the standard imports:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns; sns.set()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introducing Principal Component Analysis\n",
+    "\n",
+    "• Principal component analysis is a fast and flexible unsupervised method for dimensionality reduction in data, which we saw briefly in Introducing Scikit-Learn.\n",
+    "\n",
+    "• Its behavior is easiest to visualize by looking at a two-dimensional dataset.\n",
+    "\n",
+    "• Consider the following 200 points:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
