--- a/python/12_scikit_learn/9.2 Example - Visualizing Structure in Digits.ipynb
+++ b/python/12_scikit_learn/9.2 Example - Visualizing Structure in Digits.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "(70000, 784)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,8 +44,17 @@
    "source": [
     "from sklearn.datasets import fetch_mldata\n",
     "DATA_PATH = '/home/rajesh/git/python_excercise_programiz/python/12_scikit_learn'\n",
-    "mnist = fetch_mldata('MNIST original', data_home='/home/rajesh/git/python_excercise_programiz/python/12_scikit_learn')\n",
+    "mnist = fetch_mldata('MNIST original', data_home=DATA_PATH)\n",
     "mnist.data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• This consists of 70,000 images, each with 784 pixels (i.e. the images are 28×28).\n",
+    "\n",
+    "• As before, we can take a look at the first few images:"
    ]
   },
   {
