--- a/python/12_scikit_learn/10.0 KMeans Clustering.ipynb
+++ b/python/12_scikit_learn/10.0 KMeans Clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In Depth: k-Means Clustering\n",
+    "### In Depth: KMeans Clustering\n",
     "\n",
     "• In the previous few sections, we have explored one category of unsupervised machine learning models: dimensionality reduction.\n",
     "\n",
