--- a/python/12_scikit_learn/10.2 Example 2 - KMeans for color compression.ipynb
+++ b/python/12_scikit_learn/10.2 Example 2 - KMeans for color compression.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "• This image on the right achieves a compression factor of around 1 million! While this is an interesting application of k-means, there are certainly better way to compress information in images.\n",
     "\n",
-    "But the example shows the power of thinking outside of the box with unsupervised methods like k-means."
+    "• But the example shows the power of thinking outside of the box with unsupervised methods like k-means."
    ]
   }
  ],
