--- a/python/12_scikit_learn/12.0 Kernel Density Estimation.ipynb
+++ b/python/12_scikit_learn/12.0 Kernel Density Estimation.ipynb
@@ -363,11 +363,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Selecting the bandwidth via cross-validation\n",
+    "\n",
+    "• The choice of bandwidth within KDE is extremely important to finding a suitable density estimate, and is the knob that controls the bias–variance trade-off in the estimate of density: too narrow a bandwidth leads to a high-variance estimate (i.e., over-fitting), where the presence or absence of a single point makes a large difference.\n",
+    "\n",
+    "• Too wide a bandwidth leads to a high-bias estimate (i.e., under-fitting) where the structure in the data is washed out by the wide kernel.\n",
+    "\n",
+    "• There is a long history in statistics of methods to quickly estimate the best bandwidth based on rather stringent assumptions about the data: if you look up the KDE implementations in the SciPy and StatsModels packages, for example, you will see implementations based on some of these rules.\n",
+    "\n",
+    "• In machine learning contexts, we've seen that such hyperparameter tuning often is done empirically via a cross-validation approach.\n",
+    "\n",
+    "• With this in mind, the KernelDensity estimator in Scikit-Learn is designed such that it can be used directly within the Scikit-Learn's standard grid search tools.\n",
+    "\n",
+    "• Here we will use GridSearchCV to optimize the bandwidth for the preceding dataset.\n",
+    "\n",
+    "• Because we are looking at such a small dataset, we will use leave-one-out cross-validation, which minimizes the reduction in training set size for each cross-validation trial:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise-deprecating',\n",
+       "             estimator=KernelDensity(algorithm='auto', atol=0, bandwidth=1.0,\n",
+       "                                     breadth_first=True, kernel='gaussian',\n",
+       "                                     leaf_size=40, metric='euclidean',\n",
+       "                                     metric_params=None, rtol=0),\n",
+       "             iid='warn', n_jobs=None,\n",
+       "             param_grid={'bandwidth': array([ 0.1       ,  0.10476158,  0.10974988,  0.1149757 ,  0.12045035,\n",
+       "        0.12618569,  0.13219411,  0.13848864,  0.145082...\n",
+       "        3.27454916,  3.43046929,  3.59381366,  3.76493581,  3.94420606,\n",
+       "        4.1320124 ,  4.32876128,  4.53487851,  4.75081016,  4.97702356,\n",
+       "        5.21400829,  5.46227722,  5.72236766,  5.9948425 ,  6.28029144,\n",
+       "        6.57933225,  6.8926121 ,  7.22080902,  7.56463328,  7.92482898,\n",
+       "        8.30217568,  8.69749003,  9.11162756,  9.54548457, 10.        ])},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import LeaveOneOut\n",
+    "\n",
+    "bandwidths = 10 ** np.linspace(-1, 1, 100)\n",
+    "grid = GridSearchCV(KernelDensity(kernel='gaussian'),{'bandwidth':bandwidths}, cv=3)\n",
+    "grid.fit(x[:, None])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• Now we can find the choice of bandwidth which maximizes the score (which in this case defaults to the log-likelihood):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bandwidth': 3.4304692863149193}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "• The optimal bandwidth happens to be very close to what we used in the example plot earlier, where the bandwidth was 1.0 (i.e., the default width of scipy.stats.norm)"
+   ]
   }
  ],
  "metadata": {
